--- a/resources/configs/raspberrypi4_lvgl_defconfig
+++ b/resources/configs/raspberrypi4_lvgl_defconfig
@@ -9,6 +9,7 @@ BR2_TARGET_GENERIC_HOSTNAME="lvgl-buildroot"
 BR2_TARGET_GENERIC_ISSUE="Welcome to LVGL Buildroot! "
 BR2_TARGET_GENERIC_ROOT_PASSWD="lvgl-buildroot "
 BR2_SYSTEM_DHCP="eth0"
+BR2_ROOTFS_OVERLAY="../resources/board/rootfs_overlay"
 BR2_ROOTFS_POST_BUILD_SCRIPT="board/raspberrypi4-64/post-build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/raspberrypi4-64/post-image.sh"
 BR2_LINUX_KERNEL=y
