[env]: add lv_benchmark as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = buildroot
 	url = https://github.com/buildroot/buildroot.git
 	branch = 2024.08
+[submodule "application/application"]
+	path = application/application
+	url = https://github.com/EDGEMTech/lv_benchmark.git
